--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <h1>Happy New Year</h1>
+    <header>
+        <div class="container">
+            <div class="banner-text">
+                <h3>Happy New Year</h3>
+                <h1>New Year Party Celebration</h1>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
