--- a/index.html
+++ b/index.html
@@ -4,16 +4,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 1</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
     <header>
         <div class="container">
             <div class="banner-text">
-                <h3>Happy New Year</h3>
-                <h1>New Year Party Celebration</h1>
+                <h3 class="greeting">Happy New Year</h3>
+                <h1 class="head-line">New Year Party Celebration</h1>
             </div>
         </div>
     </header>
+
+    <section id="discount">
+            <div class="section-headind">
+                <h1 class="off">65% OFF</h1>
+                <p class="deals">OUR HOLIDAY DEALS ARE BETTER</p>
+                <h2 class="difference">ALL CATEGORIES</h2>
+                <div class="img-new Year"><br><br>
+                    <img src="/resources/New Year Photo.png" alt="New Year">
+                </div>
+            </div>
+    </section>
+
 </body>
 </html>
