--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,13 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet"> 
 
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
     <header>
         <div class="container">
@@ -22,15 +26,38 @@
     </header>
 
     <section id="discount">
-            <div class="section-headind">
-                <h1 class="off">65% OFF</h1>
-                <p class="deals">OUR HOLIDAY DEALS ARE BETTER</p>
-                <h2 class="difference">ALL CATEGORIES</h2>
-                <div class="img-new Year"><br><br>
-                    <img src="/resources/New Year Photo.png" alt="New Year">
-                </div>
+        <div class="section-headind">
+            <h1 class="off">65% OFF</h1>
+            <p class="deals">OUR HOLIDAY DEALS ARE BETTER</p>
+            <h2 class="difference">ALL CATEGORIES</h2>
+            <div class="img-new Year"><br><br>
+                <img src="/resources/New Year Photo.png" alt="New Year">
             </div>
+        </div>
     </section>
 
+    <section>
+        <div class="Party">
+            <div>
+                <h1 class="night">Welcome to midnight party</h1>
+                <div>
+                    <p class="party-paragraph">It can hardly be normal to express joy or celebration on the dot of an exact date and time. There,s hardly any spontaneity in that. </p>
+                </div>
+                <button class="wish">JOIN NOW</button>
+            </div>
+            <img class="calendar-pic" src="/resources/Group 70.png" alt="img 70">
+        </div>
+    </section>
+
+    <section>
+        <div class="Value">
+            <h1 class="Value-detaile"> <span style="color:red">Place:</span> New Park Hotel <br>
+                <span style="color:red">Date:</span>  31 December Night 2023 <br>
+                <span style="color:red">Time:</span> Evening 7.30 pm to 12.30 am <br>
+            </h1>
+            <button class="appeal">JOIN NOW</button>
+        </div>
+    </section>
 </body>
+
 </html>
