--- a/index.html
+++ b/index.html
@@ -174,11 +174,54 @@
                 wide range of topics tailored to your interests. Whether you're a curious mind or a dedicated
                 enthusiast, subscribing ensures you're always in the know." </p>
 
-                <label>
-                    <input type="text" name="" placeholder="Enter your email here....">
-                    <button>Subscribe</button>
-                </label>
-    </section>    
-    
+            <label>
+                <input type="text" name="" placeholder="Enter your email here....">
+                <button>Subscribe</button>
+            </label>
+    </section>
+
+    <footer class="footer-section">
+        <div class="footer-colom">
+
+            <h3 class="section-tile">44, Big Building Roosevelt Street
+                Beach Gardens Florida 33410</h3>
+
+        </div>
+
+        <!-- <h2>Horizontal Line</h2> -->
+
+        <hr class="h">
+
+        <div class="social-link">
+            <div class="facebook"><a href=""><img src="/resources/Facebook.png" alt=""></a></div>
+            <div class="Instagram"><a href=""><img src="/resources/Instagram.png" alt=""></a></div>
+            <div class="Twitter"><a href=""><img src="/resources/Twitter.png" alt=""></a></div>
+            <div class="Linkedin"><a href=""><img src="/resources/Linkedin.png" alt=""></a></div>
+        </div>
+
+        <hr class="h">
+
+        <!-- <div class="footer-colom">
+
+        </div> -->
+
+        <div class="right">
+            <h3>2024, All Rights Reserved.</h3>
+        </div>
+
+        <div class="web">
+            <img src="/resources/Website.png" alt="">
+            <div class="world">www.website.com</div>
+        </div> 
+
+
+        <div class="content">
+            <img src="/resources/Call.png" alt="">
+            <div class="phone">+00 123 584 124</div>
+        </div>
+   
+    </footer>
+
 </body>
+
 </html>
